--- a/style/personal-profile.less
+++ b/style/personal-profile.less
@@ -215,3 +215,11 @@
 .header__contact li:last-child {
   margin-bottom: 0
 }
+
+.account-right {
+  margin-left: 95px;
+}
+
+#pills-order {
+  margin-left: -50px;
+}
