fix: Release a new version of homepage

--- a/style/style.css
+++ b/style/style.css
@@ -1,54 +1,4 @@
-.pre-header {
-    color: white;
-    border-bottom: 1px solid #eee;
-    font-family: 'Open Sans', sans-serif;
-    font-weight: bold;
-    background: black;
+.search-form{
+    border: 2px solid deeppink;
+    border-radius: 15px;
 }
-
-.pre-header ul{
-    text-align: left;
-}
-.pre-header img{
-    width:20px;
-    height:20px;
-}
-.flower{
-    float: left;
-}
-.flower img{
-    width: 40px;
-    height: 40px;
-}
-.second-header .logo{
-    text-align: center;
-}
-.navigation{
-    text-align: center;
-}
-.bg{
-    height:60px;
-    text-align: center;
-    line-height: 60px;
-    position: relative;
-    background-color: rgba(0,0,0,.5);
-
-}
-.carousell img{
-    max-width: 60%;
-    max-height: 30%;
-}
-
-
-.dropdown{
-    color: white;
-    border-bottom: 1px solid #eee;
-    font-family: 'Open Sans', sans-serif;
-    font-weight: bold;
-    font-size: 30px;
-}
-
-.dropdown:hover {
-    color: #E02222;
-}
-
