personal profile page address form

--- a/style/personal-profile.less
+++ b/style/personal-profile.less
@@ -216,18 +216,21 @@
   margin-bottom: 0
 }
 
-.account-right {
-  margin-left: 95px;
-}
 
-#pills-order {
-  margin-left: -50px;
-}
+@media only screen and (min-width: 1200px) {
+  .account-right {
+    margin-left: 95px;
+  }
 
-#pills-account {
-  margin-left: -25px;
-}
+  #pills-order {
+    margin-left: -50px;
+  }
 
-#pills-edit-account {
-  margin-left: -50px;
+  #pills-account {
+    margin-left: -25px;
+  }
+
+  #pills-edit-account {
+    margin-left: -50px;
+  }
 }
