--- a/style/personal-profile.css
+++ b/style/personal-profile.css
@@ -177,16 +177,18 @@
 .header__contact li:last-child {
   margin-bottom: 0;
 }
-.account-right {
-  margin-left: 95px;
-}
-#pills-order {
-  margin-left: -50px;
-}
-#pills-account {
-  margin-left: -25px;
-}
-#pills-edit-account {
-  margin-left: -50px;
+@media only screen and (min-width: 1200px) {
+  .account-right {
+    margin-left: 95px;
+  }
+  #pills-order {
+    margin-left: -50px;
+  }
+  #pills-account {
+    margin-left: -25px;
+  }
+  #pills-edit-account {
+    margin-left: -50px;
+  }
 }
 /*# sourceMappingURL=personal-profile.css.map */
