address function finished

--- a/style/personal-profile.css
+++ b/style/personal-profile.css
@@ -191,4 +191,9 @@
     margin-left: -50px;
   }
 }
+.account-address .del {
+  float: right;
+  padding-right: 30px;
+  cursor: pointer;
+}
 /*# sourceMappingURL=personal-profile.css.map */
