--- a/style/personal-profile.less
+++ b/style/personal-profile.less
@@ -234,3 +234,11 @@
     margin-left: -50px;
   }
 }
+
+.account-address{
+  .del{
+    float: right;
+    padding-right: 30px;
+    cursor: pointer;
+  }
+}
