login.html,signup.html

--- a/staff-portal/src/assets/_scss/dashmix/themes/_base.scss
+++ b/staff-portal/src/assets/_scss/dashmix/themes/_base.scss
@@ -3,19 +3,19 @@
 // --------------------------------------------------
 
 // Bootstrap functions
-@import '../../bootstrap/functions';
+@import '../bootstrap/functions';
 
 // User variables (your own variable overrides)
-@import '../../custom/variables';
+@import '../custom/variables';
 
 // Custom Bootstrap variables overrides
 @import '../variables-bootstrap';
 
 // Bootstrap variables
-@import '../../bootstrap/variables';
+@import '../bootstrap/variables';
 
 // Bootstrap mixins
-@import '../../bootstrap/mixins';
+@import '../bootstrap/mixins';
 
 // Custom mixins and Bootstrap overrides
 @import '../mixins';
