feature: add header functions

--- a/style/style.css
+++ b/style/style.css
@@ -40,15 +40,15 @@
 }
 
 
-.dropdown{
-    color: white;
-    border-bottom: 1px solid #eee;
-    font-family: 'Open Sans', sans-serif;
-    font-weight: bold;
-    font-size: 30px;
-}
+/*.dropdown{*/
+/*    color: white;*/
+/*    border-bottom: 1px solid #eee;*/
+/*    font-family: 'Open Sans', sans-serif;*/
+/*    font-weight: bold;*/
+/*    font-size: 30px;*/
+/*}*/
 
-.dropdown:hover {
-    color: #E02222;
-}
+/*.dropdown:hover {*/
+/*    color: #E02222;*/
+/*}*/
 
