updated the chat system and connect with the remote database(however there are some problems), this will be fixed soon.

--- a/staff-portal/src/assets/css/dashmix.css
+++ b/staff-portal/src/assets/css/dashmix.css
@@ -13045,6 +13045,7 @@ a.badge-secondary:focus, a.badge-secondary.focus {
 
 .content {
   width: 100%;
+  height: 400px;
   margin: 0 auto;
   padding: 0.875rem 0.875rem 1px;
   overflow-x: visible;
