login register optimize

--- a/style/login-signup.less
+++ b/style/login-signup.less
@@ -1,5 +1,17 @@
-.content{
-  .imgs{
-    max-width: fit-content;
+.content {
+  background: white;
+  border-radius: 1%;
+  overflow: hidden;
+  margin-top: 15px;
+  margin-left: 20%;
+  margin-right: 20%;
+  margin-bottom: 50px;
+  max-width: 1070px;
+  display: flex;
+
+  .imgs {
+    //max-width: fit-content;
+    height: 610px;
+    width: 550px
   }
 }
