--- a/template/header.html
+++ b/template/header.html
@@ -7,7 +7,7 @@
             <div class="row align-items-center">
                 <div class="col-lg-2">
                     <div class="header-logo">
-                        <a href="index.html"><img src="assets/images/logo/logo.png" alt=""></a>
+                        <a href="/index.php"><img src="/assets/images/logo/logo.png" alt=""></a>
                     </div>
                 </div>
                 <div class="col-lg-7 position-static">
@@ -54,7 +54,7 @@
                                         <li class="mega-dropdown">
                                             <a class="mega-title">DEAL OF THE WEEK</a>
                                             <a class="menu-banner">
-                                                <img src="assets/images/menu-banner.jpg" alt="">
+                                                <img src="/assets/images/menu-banner.jpg" alt="">
                                             </a>
                                         </li>
                                     </ul>
@@ -105,7 +105,7 @@
                         </div>
                         <div class="header-account">
                             <div class="header-account-list top-link">
-                                <a href="user/personal-profile/personal-profile.html" role="button"><i
+                                <a href="/user/personal-profile/personal-profile.php" role="button"><i
                                         class="icon-users"></i></a>
                             </div>
                             <div class="header-account-list mini-cart">
@@ -129,7 +129,7 @@
         <div class="row align-items-center">
             <div class="col -6">
                 <div class="header-logo">
-                    <a href="index.html"><img src="assets/images/logo/logo.png" alt=""></a>
+                    <a href="/index.php"><img src="/assets/images/logo/logo.png" alt=""></a>
                 </div>
             </div>
             <div class="col-6">
