--- a/style/login-signup.css
+++ b/style/login-signup.css
@@ -1,4 +1,16 @@
+.content {
+  background: white;
+  border-radius: 1%;
+  overflow: hidden;
+  margin-top: 15px;
+  margin-left: 20%;
+  margin-right: 20%;
+  margin-bottom: 50px;
+  max-width: 1070px;
+  display: flex;
+}
 .content .imgs {
-  max-width: fit-content;
+  height: 610px;
+  width: 550px;
 }
 /*# sourceMappingURL=login-signup.css.map */
