--- a/style/personal-profile.less
+++ b/style/personal-profile.less
@@ -235,10 +235,34 @@
   }
 }
 
-.account-address{
-  .del{
+.account-address {
+  .del {
     float: right;
     padding-right: 30px;
     cursor: pointer;
+  }
+}
+
+.xtiper_tit.xmcss1 {
+  p {
+    margin: auto 0;
+    display: inline;
+    font-weight: 600;
+    font-size: initial;
+  }
+}
+
+#quick-view-table {
+  padding: 0 20px;
+}
+
+#btns {
+  .btn {
+    display: block;
+    margin: auto;
+    font-size: 12px;
+    margin-bottom: 20px !important;
+    padding: 0 15px;
+    line-height: 0;
   }
 }
