--- a/css/style.css
+++ b/css/style.css
@@ -482,7 +482,7 @@ p {
 
 /*----------------------------------------- 6) Hero --------------------------------------------------*/
 #home {
-  background: url('../images/hero1.jpeg');
+  background: url('../images/background.png');
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -883,18 +883,115 @@ ul.portfolio-image li .desc{
   color: #5f5f5f;
 }
 /*---------- f. quote -----------*/
-#about{
+.about{
   min-height: 650px;
   display: inline-block;
   width: 100%;
 }
 .bg-about {
   background: url('../images/reza.jpg');
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
+  /*-webkit-background-size: cover;*/
+  /*-moz-background-size: cover;*/
+  /*-o-background-size: cover;*/
+  /*background-size: cover;*/
   background-repeat: no-repeat;
+
+  position: relative;
+  padding: 0;
+  margin: 0;
+  min-height: 660px;
+  width: 100%;
+  height: 100%;
+  float: left;
+}
+.bg-about1 {
+  background: url('../images/ZhaoYiran.jpg');
+  /*-webkit-background-size: cover;*/
+  /*-moz-background-size: cover;*/
+  /*-o-background-size: cover;*/
+  /*background-size: cover;*/
+  background-repeat: no-repeat;
+
+  position: relative;
+  padding: 0;
+  margin: 0;
+  min-height: 660px;
+  width: 100%;
+  height: 100%;
+  float: left;
+}
+.bg-about2 {
+  background: url('../images/LiDianzhe.jpg');
+  /*-webkit-background-size: cover;*/
+  /*-moz-background-size: cover;*/
+  /*-o-background-size: cover;*/
+  /*background-size: cover;*/
+  background-repeat: no-repeat;
+
+  position: relative;
+  padding: 0;
+  margin: 0;
+  min-height: 660px;
+  width: 100%;
+  height: 100%;
+  float: left;
+}
+.bg-about3 {
+  background: url('../images/LiuYuxin.jpg');
+  /*-webkit-background-size: cover;*/
+  /*-moz-background-size: cover;*/
+  /*-o-background-size: cover;*/
+  /*background-size: cover;*/
+  background-repeat: no-repeat;
+
+  position: relative;
+  padding: 0;
+  margin: 0;
+  min-height: 660px;
+  width: 100%;
+  height: 100%;
+  float: left;
+}
+.bg-about4 {
+  background: url('../images/JiaTiancheng.jpg');
+  /*-webkit-background-size: cover;*/
+  /*-moz-background-size: cover;*/
+  /*-o-background-size: cover;*/
+  /*background-size: cover;*/
+  background-repeat: no-repeat;
+
+  position: relative;
+  padding: 0;
+  margin: 0;
+  min-height: 660px;
+  width: 100%;
+  height: 100%;
+  float: left;
+}
+.bg-about5 {
+  background: url('../images/FuHan.jpg');
+  /*-webkit-background-size: cover;*/
+  /*-moz-background-size: cover;*/
+  /*-o-background-size: cover;*/
+  /*background-size: cover;*/
+  background-repeat: no-repeat;
+
+  position: relative;
+  padding: 0;
+  margin: 0;
+  min-height: 660px;
+  width: 100%;
+  height: 100%;
+  float: left;
+}
+.bg-about6 {
+  background: url('../images/ShenShuyi.jpg');
+  /*-webkit-background-size: cover;*/
+  /*-moz-background-size: cover;*/
+  /*-o-background-size: cover;*/
+  /*background-size: cover;*/
+  background-repeat: no-repeat;
+
   position: relative;
   padding: 0;
   margin: 0;
@@ -921,7 +1018,7 @@ ul.portfolio-image li .desc{
 }
 
 .wrap-about .w-content td{
-  font-size: 13px;
+  font-size: 30px;
   font-weight: 300;
 }
 .wrap-about .w-content td.title{
