--- a/template/header.html
+++ b/template/header.html
@@ -60,13 +60,13 @@
                                     </ul>
                                 </li>
                                 <li>
-                                    <a href="#">Blog</a>
+                                    <a href="#">News</a>
 
                                     <ul class="sub-menu">
                                         <li>
-                                            <a href="#">Blog</a>
+                                            <a href="#">News</a>
                                             <ul class="sub-menu">
-                                                <li><a href="blog.html">Blog</a></li>
+                                                <li><a href="blog.html">News</a></li>
                                                 <li><a href="blog-left-sidebar.html">Blog Left Sidebar</a></li>
                                                 <li><a href="blog-right-sidebar.html">Blog Right Sidebar</a></li>
                                             </ul>
@@ -109,7 +109,7 @@
                                         class="icon-users"></i></a>
                             </div>
                             <div class="header-account-list mini-cart">
-                                <a href="#" role="button">
+                                <a href="/trading/cart.html" role="button">
                                     <i class="icon-shopping-bag"></i>
                                 </a>
                             </div>
@@ -206,22 +206,15 @@
                     </ul>
                 </li>
                 <li>
-                    <a href="#">Blog</a>
+                    <a href="#">News</a>
 
                     <ul class="sub-menu">
                         <li>
-                            <a href="#">Blog 1</a>
+                            <a href="#">News</a>
                             <ul class="sub-menu">
                                 <li><a href="blog1.html">Blog 1-1</a></li>
                                 <li><a href="blog1-1.html">Blog1-2</a></li>
                                 <li><a href="blog1-2.html">Blog1-3</a></li>
-                            </ul>
-                        </li>
-                        <li>
-                            <a href="#">Blog 2</a>
-                            <ul class="sub-menu">
-                                <li><a href="blog2-1.html">Blog2-1</a></li>
-                                <li><a href="blog2-2.html">Blog2-2</a></li>
                             </ul>
                         </li>
                     </ul>
