--- a/template/header.html
+++ b/template/header.html
@@ -7,7 +7,7 @@
             <div class="row align-items-center">
                 <div class="col-lg-2">
                     <div class="header-logo">
-                        <a href="/index.php"><img src="/assets/images/logo/logo.png" alt=""></a>
+                        <a href="/index.php"><img src="../assets/images/logo/logo.png" alt=""></a>
                     </div>
                 </div>
                 <div class="col-lg-7 position-static">
@@ -54,19 +54,19 @@
                                         <li class="mega-dropdown">
                                             <a class="mega-title">DEAL OF THE WEEK</a>
                                             <a class="menu-banner">
-                                                <img src="/assets/images/menu-banner.jpg" alt="">
+                                                <img src="../assets/images/menu-banner.jpg" alt="">
                                             </a>
                                         </li>
                                     </ul>
                                 </li>
                                 <li>
-                                    <a href="#">News</a>
+                                    <a href="#">Blog</a>
 
                                     <ul class="sub-menu">
                                         <li>
-                                            <a href="#">News</a>
+                                            <a href="#">Blog</a>
                                             <ul class="sub-menu">
-                                                <li><a href="blog.html">News</a></li>
+                                                <li><a href="blog.html">Blog</a></li>
                                                 <li><a href="blog-left-sidebar.html">Blog Left Sidebar</a></li>
                                                 <li><a href="blog-right-sidebar.html">Blog Right Sidebar</a></li>
                                             </ul>
@@ -109,7 +109,7 @@
                                         class="icon-users"></i></a>
                             </div>
                             <div class="header-account-list mini-cart">
-                                <a href="/trading/cart.html" role="button">
+                                <a href="../trading/cart.html" role="button">
                                     <i class="icon-shopping-bag"></i>
                                 </a>
                             </div>
@@ -129,7 +129,7 @@
         <div class="row align-items-center">
             <div class="col -6">
                 <div class="header-logo">
-                    <a href="/index.php"><img src="/assets/images/logo/logo.png" alt=""></a>
+                    <a href="/index.php"><img src="../assets/images/logo/logo.png" alt=""></a>
                 </div>
             </div>
             <div class="col-6">
@@ -147,7 +147,7 @@
                             </ul>
                         </div>
                         <div class="header-account-list mini-cart">
-                            <a href="#">
+                            <a href="../trading/cart.html">
                                 <i class="icon-shopping-cart"></i>
                                 <span class="item-count ">0</span>
                             </a>
@@ -206,15 +206,22 @@
                     </ul>
                 </li>
                 <li>
-                    <a href="#">News</a>
+                    <a href="#">Blog</a>
 
                     <ul class="sub-menu">
                         <li>
-                            <a href="#">News</a>
+                            <a href="#">Blog 1</a>
                             <ul class="sub-menu">
                                 <li><a href="blog1.html">Blog 1-1</a></li>
                                 <li><a href="blog1-1.html">Blog1-2</a></li>
                                 <li><a href="blog1-2.html">Blog1-3</a></li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a href="#">Blog 2</a>
+                            <ul class="sub-menu">
+                                <li><a href="blog2-1.html">Blog2-1</a></li>
+                                <li><a href="blog2-2.html">Blog2-2</a></li>
                             </ul>
                         </li>
                     </ul>
