--- a/template/header.html
+++ b/template/header.html
@@ -35,7 +35,7 @@
                                             <a class="mega-title">FLOWER VARIETIES</a>
 
                                             <ul class="mega-item">
-                                                <li><a href="Roses.html">Roses</a></li>
+                                                <li><a href="/trading/shop-list.html">Roses</a></li>
                                                 <li><a href="Lilies.html">Lilies</a></li>
                                                 <li><a href="Gerbera.html">Gerbera</a></li>
                                                 <li><a href="Carnations.html">Carnations</a></li>
