--- a/style/login-signup.less
+++ b/style/login-signup.less
@@ -1,17 +1,22 @@
 .content {
   background: white;
-  border-radius: 1%;
+  //border-radius: 1%;
   overflow: hidden;
-  margin-top: 15px;
-  margin-left: 20%;
-  margin-right: 20%;
-  margin-bottom: 50px;
-  max-width: 1070px;
-  display: flex;
+  //margin-top: 15px;
+  //margin-left: 20%;
+  //margin-right: 20%;
+  //margin-bottom: 50px;
+  //max-width: 1070px;
+  //display: flex;
+
+  form{
+
+  }
 
   .imgs {
+    height: 80%;
     //max-width: fit-content;
-    height: 610px;
-    width: 550px
+    //height: 610px;
+    //width: 550px
   }
 }
