Add language swithcing button

--- a/template/header.html
+++ b/template/header.html
@@ -99,7 +99,7 @@
                     <div class="header-meta-info">
                         <div class="header-search">
                             <form action="#">
-                                <input type="text" placeholder="Search our store ">
+                                <input type="text" placeholder="Search">
                                 <button><i class="icon-search"></i></button>
                             </form>
                         </div>
@@ -114,6 +114,9 @@
                                 </a>
                             </div>
                         </div>
+                        <div style="margin-left: 8%; margin-right: 5%;"><a href="#">zh</a></div>
+                        <div style="float:left;width: 1px;height: 20px; background: darkgray;"></div>
+                        <div style="margin-left: 5%;"><a href="#">en</a> </div>
                     </div>
                 </div>
             </div>
@@ -160,6 +163,9 @@
                             </button>
                         </div>
                     </div>
+                    <div style="margin-left: 5%; margin-right: 5%;"><a href="#">zh</a></div>
+                    <div style="float:left;width: 1px;height: 20px; background: darkgray;"></div>
+                    <div style="margin-left: 5%;"><a href="#">en</a> </div>
                 </div>
             </div>
         </div>
@@ -178,7 +184,7 @@
     <div class="header-meta-info">
         <div class="header-search">
             <form action="#" class="search-form">
-                <input type="text" placeholder="Search our store ">
+                <input type="text" placeholder="Search our store">
                 <button><i class="icon-search" style="color: deeppink"></i></button>
             </form>
         </div>
