trading 疫情系统修改

--- a/staff-portal/src/assets/_scss/dashmix/themes/xdream.scss
+++ b/staff-portal/src/assets/_scss/dashmix/themes/xdream.scss
@@ -2,7 +2,7 @@
 // xDream Theme
 // --------------------------------------------------
 
-// Include base files
+// Include base Apendix
 @import 'base';
 
 // Generate color theme
