--- a/staff-portal/src/assets/_scss/custom/_main.scss
+++ b/staff-portal/src/assets/_scss/custom/_main.scss
@@ -7,6 +7,6 @@
 // to all Bootstrap and Dashmix functions/mixins/styles etc
 // --------------------------------------------------
 
-// If you have many custom styles, you can create and import additional files
+// If you have many custom styles, you can create and import additional Apendix
 // For example you can create _component1.scss and include it as follows:
 // @import 'component1';
