--- a/staff-portal/src/assets/_scss/dashmix/themes/_base.scss
+++ b/staff-portal/src/assets/_scss/dashmix/themes/_base.scss
@@ -1,5 +1,5 @@
 //
-// Required files for theme creation
+// Required Apendix for theme creation
 // --------------------------------------------------
 
 // Bootstrap functions
