--- a/staff-portal/src/assets/_scss/dashmix/themes/xsmooth.scss
+++ b/staff-portal/src/assets/_scss/dashmix/themes/xsmooth.scss
@@ -2,7 +2,7 @@
 // xSmooth Theme
 // --------------------------------------------------
 
-// Include base files
+// Include base Apendix
 @import 'base';
 
 // Generate color theme
