--- a/staff-portal/src/assets/js/plugins/highlightjs/styles/night-owl.css
+++ b/staff-portal/src/assets/js/plugins/highlightjs/styles/night-owl.css
@@ -8,7 +8,7 @@ https://github.com/sdras/night-owl-vscode-theme
 Copyright (c) 2018 Sarah Drasner
 
 Permission is hereby granted, free of charge, to any person obtaining a copy
-of this software and associated documentation files (the "Software"), to deal
+of this software and associated documentation Apendix (the "Software"), to deal
 in the Software without restriction, including without limitation the rights
 to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
 copies of the Software, and to permit persons to whom the Software is
