--- a/style/payment.less
+++ b/style/payment.less
@@ -1,27 +1,7 @@
-.content {
-  display: flex;
-
-  .wrapper {
-    align-items: center;
-    text-align: center;
-
-    .info{
-      font-weight: bolder;
-      font-size: xx-large;
-      color: #f34f3f;
-      margin: 30px auto;
-    }
-
-    img{
-      margin-bottom: 30px;
-    }
-
-    .btn-wrapper{
-      display: flex;
-
-      .btn{
-        margin-bottom: 30px;
-      }
-    }
+.page-wrapper-two {
+  .tdcore{
+    position: fixed;
+    left: 22%;
+    margin-top: 14%;
   }
 }
